--- a/App.xaml
+++ b/App.xaml
@@ -1,13 +1,26 @@
 ﻿<Application x:Class="Clickless.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindow.xaml">
-    
+             xmlns:viewModel="clr-namespace:Clickless.MVVM.ViewModel"
+             xmlns:view="clr-namespace:Clickless.MVVM.View"
+             StartupUri="MVVM\View\MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Themes/MenuButtonTheme.xaml" />
+                <ResourceDictionary Source="MVVM/Themes/MenuButtonTheme.xaml" />
+                <ResourceDictionary Source="MVVM/Themes/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:DetectionSettingsViewModel}">
+                <view:DetectionSettings/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:KeyboardSettingsViewModel}">
+                <view:KeyboardSettings/>
+            </DataTemplate>
+
+
+
         </ResourceDictionary>
     </Application.Resources>
     
