--- a/MVVM/View/DetectionSettings.xaml
+++ b/MVVM/View/DetectionSettings.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="Clickless.Views.DetectionSettings"
+﻿<UserControl x:Class="Clickless.MVVM.View.DetectionSettings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:Clickless.MVVM.View"
              x:Name="UserControl"
-             Width="400" Height="300">
+             >
     <UserControl.Resources>
         <Style TargetType="Button" x:Key="RoundedButton">
             <Setter Property="Template">
@@ -40,31 +41,30 @@
         <!-- Define rows and columns -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
+
         </Grid.ColumnDefinitions>
 
-        <!-- Density Input -->
         <Label Content="Density:" Grid.Row="0" Grid.Column="0" Margin="10" VerticalAlignment="Center" Foreground="White"/>
-        <TextBox x:Name="DensityInput" Grid.Row="0" Grid.Column="1" Margin="10" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="100" 
+        <TextBox x:Name="DensityInput" Grid.Row="0" Grid.Column="1" Margin="10" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="50" 
                  PreviewTextInput="NumericOnly" Style="{StaticResource RoundedTextBox}"  />
         
-        <!-- Distance Input -->
-        <Label Content="Distance:" Grid.Row="1" Grid.Column="0" Margin="10" VerticalAlignment="Center" Foreground="White"/>
-        <TextBox x:Name="DistanceInput" Grid.Row="1" Grid.Column="1" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" 
+        <Label Content="Distance:" Grid.Row="0" Grid.Column="2" Margin="10" VerticalAlignment="Center" Foreground="White"/>
+        
+        <TextBox x:Name="DistanceInput" Grid.Row="0" Grid.Column="3" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" 
                  PreviewTextInput="NumericOnly" Style="{StaticResource RoundedTextBox}"  />
 
-        <!-- Update Button -->
-        <Button Content="Update" Grid.Row="2" Grid.Column="1" Margin="10" VerticalAlignment="Center" Click="UpdateButton_Click"
+        <Button Content="Update" Grid.Row="0" Grid.Column="4" Margin="10" VerticalAlignment="Center" Click="UpdateButton_Click"
                 Style="{StaticResource RoundedButton}" />
 
-        <!-- Image Display -->
-        <Image x:Name="ResultImage" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" Stretch="Uniform" />
+        <Image x:Name="ResultImage" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" Margin="10" Stretch="Uniform" />
 
 
 
