--- a/MVVM/View/DetectionSettings.xaml
+++ b/MVVM/View/DetectionSettings.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="Clickless.MVVM.View.DetectionSettings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Clickless.MVVM.View"
+             xmlns:local="clr-namespace:Clickless.MVVM.View" xmlns:viewModel="clr-namespace:Clickless.MVVM.ViewModel"
              x:Name="UserControl"
              >
     <UserControl.Resources>
@@ -35,10 +35,16 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+
     </UserControl.Resources>
+
+    <UserControl.DataContext>
+        <viewModel:DetectionSettingsViewModel/>
+    </UserControl.DataContext>
+
     <Grid>
         
-        <!-- Define rows and columns -->
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
@@ -56,7 +62,8 @@
         <TextBox x:Name="DensityInput" Grid.Row="0" Grid.Column="1" Margin="10" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="50" 
                  PreviewTextInput="NumericOnly" 
                  IsEnabled="True"
-                 Text="10"
+                 Foreground="White"
+                 Text="{Binding M}"
                  BorderThickness="0"
                  TextAlignment="Center"
                  Background="#474465" />
@@ -66,7 +73,8 @@
         <TextBox x:Name="DistanceInput" Grid.Row="0" Grid.Column="3" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" 
                  PreviewTextInput="NumericOnly"
                  IsEnabled="True"
-                 Text="10"
+                    Foreground="White"
+                 Text="{Binding  Epsilon}"
                  BorderThickness="0"
                  TextAlignment="Center"
                  Background="#474465"/>
@@ -74,9 +82,11 @@
         <Button Content="Update" Grid.Row="0" Grid.Column="4" Margin="10" VerticalAlignment="Center" Click="UpdateButton_Click"
                 Style="{StaticResource RoundedButton}" />
 
-        <Image x:Name="ResultImage" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" Margin="10" Stretch="Uniform" />
-
-
+        <Border Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5">
+            <Border.Background>
+                <ImageBrush x:Name="ResultImage" Stretch="Uniform"/>
+            </Border.Background>
+        </Border>
 
     </Grid>
 </UserControl>
