--- a/MVVM/View/DetectionSettings.xaml
+++ b/MVVM/View/DetectionSettings.xaml
@@ -1,7 +1,8 @@
 ﻿<UserControl x:Class="Clickless.MVVM.View.DetectionSettings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Clickless.MVVM.View" xmlns:viewModel="clr-namespace:Clickless.MVVM.ViewModel"
+             xmlns:local="clr-namespace:Clickless.MVVM.View"
+             xmlns:viewModel="clr-namespace:Clickless.MVVM.ViewModel"
              x:Name="UserControl"
              >
     <UserControl.Resources>
