--- a/App.xaml
+++ b/App.xaml
@@ -20,6 +20,11 @@
             </DataTemplate>
 
 
+            <DataTemplate DataType="{x:Type viewModel:HelpViewModel}">
+                <view:Help/>
+            </DataTemplate>
+
+
         </ResourceDictionary>
     </Application.Resources>
     
