Added in frontend, backend, serialization, and some bug fixes for using grid based mode, and switching between the edge detection and grid based mode.

--- a/App.xaml
+++ b/App.xaml
@@ -19,9 +19,16 @@
                 <view:KeyboardSettings/>
             </DataTemplate>
 
-
             <DataTemplate DataType="{x:Type viewModel:HelpViewModel}">
                 <view:Help/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:SelectedClientSettingsViewModel}">
+                <view:SelectedClientSettings/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:GridSettingsViewModel}">
+                <view:GridSettings/>
             </DataTemplate>
 
 
