--- a/MVVM/View/SelectedClientSettings.xaml
+++ b/MVVM/View/SelectedClientSettings.xaml
@@ -1,14 +1,19 @@
-﻿<UserControl x:Class="Clickless.MVVM.View.KeyboardSettings"
+﻿<UserControl x:Class="Clickless.MVVM.View.SelectedClientSettings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Clickless.MVVM.View"
+             mc:Ignorable="d" 
              xmlns:viewModel="clr-namespace:Clickless.MVVM.ViewModel"
              xmlns:models="clr-namespace:Clickless.MVVM.Models"
-             xmlns:svg="http://sharpvectors.codeplex.com/svgc/"
-             mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+
+    <UserControl.DataContext>
+        <viewModel:SelectedClientSettingsViewModel/>
+    </UserControl.DataContext>
+
 
     <UserControl.Resources>
         <Style TargetType="RadioButton" x:Key="ImageRadioButton">
@@ -43,63 +48,44 @@
         </Style>
     </UserControl.Resources>
 
-    <UserControl.DataContext>
-        <viewModel:KeyboardSettingsViewModel/>
-    </UserControl.DataContext>
-    
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="100"/>
-        </Grid.RowDefinitions>
 
         <Grid.Resources>
             <local:ComparisonConverter x:Key="ComparisonConverter"/>
         </Grid.Resources>
-
+        
         <RadioButton GroupName="Group 1" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="0"
-                     Style="{StaticResource ImageRadioButton}" Name="LEFT_KEYS_RADIOBUTTON"
-                     IsChecked="{Binding SelectedSpan, Converter={StaticResource ComparisonConverter}, ConverterParameter={x:Static models:KeyboardSpan.LEFT}}">
-            
+                     Style="{StaticResource ImageRadioButton}" Name="GRID_RADIOBUTTON"
+                     IsChecked="{Binding SelectedClient, Converter={StaticResource ComparisonConverter}, ConverterParameter={x:Static models:Client.GRID}}">
+
             <RadioButton.Content>
                 <StackPanel Orientation="Vertical">
-                    <Image Source="/Clickless;component/Resources/Images/LeftKeyboardOnly.png" Width="100" Height="100"/>
-                    <TextBlock Text="L" HorizontalAlignment="Center" Foreground="Black"  VerticalAlignment="Center" FontSize="24"/>
+                    <Image Source="/Clickless;component/Resources/Images/GridClient.png" Width="300" Height="300"/>
+                    <TextBlock Text="Grid Based Search" HorizontalAlignment="Center" Foreground="White"  VerticalAlignment="Center" FontSize="24"/>
                 </StackPanel>
             </RadioButton.Content>
+
         </RadioButton>
+
 
         <RadioButton GroupName="Group 1" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"
-                     Style="{StaticResource ImageRadioButton}" Name="ALL_KEYS_RADIOBUTTON"
-                     IsChecked="{Binding SelectedSpan, Converter={StaticResource ComparisonConverter}, ConverterParameter={x:Static models:KeyboardSpan.ALL}}">
-        <RadioButton.Content>
-                <StackPanel Orientation="Vertical">
-                    <Image Source="/Clickless;component/Resources/Images/EntireKeyboard.png" Width="100" Height="100"/>
-                    <TextBlock Text="L + R" HorizontalAlignment="Center" Foreground="Black"  VerticalAlignment="Center" FontSize="24"/>
-                </StackPanel>
-            </RadioButton.Content>
-        </RadioButton>
-
-        <RadioButton GroupName="Group 1" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="2"
-                     Style="{StaticResource ImageRadioButton}" Name="RIGHT_KEYS_RADIOBUTTON"
-                     IsChecked="{Binding SelectedSpan, Converter={StaticResource ComparisonConverter}, ConverterParameter={x:Static models:KeyboardSpan.RIGHT}}">
+                     Style="{StaticResource ImageRadioButton}" Name="ML_RADIOBUTTON"
+                     IsChecked="{Binding SelectedClient, Converter={StaticResource ComparisonConverter}, ConverterParameter={x:Static models:Client.ML}}">
 
             <RadioButton.Content>
                 <StackPanel Orientation="Vertical">
-                    <Image Source="/Clickless;component/Resources/Images/RightKeyboardOnly.png" Width="100" Height="100"/>
-                    <TextBlock Text="R" HorizontalAlignment="Center" Foreground="Black"  VerticalAlignment="Center" FontSize="24"/>
+                    <Image Source="/Clickless;component/Resources/Images/MLClient.png" Width="300" Height="300"/>
+                    <TextBlock Text="Edge Based Search" HorizontalAlignment="Center" Foreground="White"  VerticalAlignment="Center" FontSize="24"/>
                 </StackPanel>
             </RadioButton.Content>
+
         </RadioButton>
 
-        <TextBlock Grid.ColumnSpan="3" Grid.Row="1" Text="Control which sections of the keyboard are used in search." HorizontalAlignment="Center" Foreground="White"  VerticalAlignment="Center" FontSize="24"/>
-        
+
     </Grid>
 </UserControl>
